--- a/yukiyalien.github.io/index.html
+++ b/yukiyalien.github.io/index.html
@@ -1,10 +1,10 @@
+<!--This file was made for @yukiyalien's website-->
 <!DOCTYPE html>
 <html lang="ja">
 </html>
     <head>
         <meta charset="UTF-8">
         <title>YUKIYA.me</title>
-        
 
     </head>
 
@@ -42,7 +42,6 @@
 
         <h1>My Tweets </h1>
         <a class="twitter-timeline" data-lang="en" data-width="500" data-height="500" data-theme="dark" href="https://twitter.com/yukiyalien?ref_src=twsrc%5Etfw">Tweets by yukiyalien</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
 
         <br><br><br>
         <p>
