全然違う位置にrel="me"を追加していたので修正

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <font size="5"><b><a href="https://friends.nico/users/Yukiya/remote_follow">Follow me on fediverse</a></b></font>
         <br>
         <font size="3">
-                <b>Mastodon</b> <a href="https://friends.nico/@Yukiya">@Yukiya@friends.nico</a><br>
+                <b>Mastodon</b> <a rel="me" href="https://friends.nico/@Yukiya">@Yukiya@friends.nico</a><br>
             <b>Discord</b> yukiyalien#7365 <br>
         </font>
 
