自己紹介の微妙な表現を修正

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1>My Profile</h1>
         千葉県に住む高校１年生。
         インターネットが大好き。
-        <p>2017年春ごろから<a href="https://joinmastodon.org">Mastodon</a>をはじめとする連合型ソーシャルネットワーキングシステム「Fediverse」に興味を持ち、以来<a href="https://friends.nico">friends.nico</a>を中心に貼り付いている。</p>
+        <p>2017年春ごろから<a href="https://joinmastodon.org">Mastodon</a>をはじめとする連合型ソーシャルネットワーキングシステム「Fediverse」の世界に興味を持ち、以来<a href="https://friends.nico">friends.nico</a>を中心に貼り付いている。</p>
 
         <h1>My Accounts</h1>
         <a href="https://twitter.com/yukiyalien?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-lang="en" data-show-count="false">Follow @yukiyalien</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
