英語表現を微妙に修正

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="github-button" href="https://github.com/yukiyalien" data-size="large" aria-label="Follow @yukiyalien on GitHub">Follow @yukiyalien</a>
         <!-- Place this tag in your head or just before your close body tag. -->
         <script async defer src="https://buttons.github.io/buttons.js"></script><br>
-        <font size="5"><b><a href="https://friends.nico/users/Yukiya/remote_follow">Follow me on fediverse</a></b></font>
+        <font size="5"><b><a href="https://friends.nico/users/Yukiya/remote_follow">Follow me on the fediverse!</a></b></font>
         <br>
         <font size="3">
                 <b>Mastodon</b> <a rel="me" href="https://friends.nico/@Yukiya">@Yukiya@friends.nico</a><br>
