CSS使わずにタグで済ませるのをやめた
タグで済ませてると偉い人にめっちゃ怒られるので絶対にNG。CSSを使う。
おそらく同じように表示されるはず。

--- a/index.html
+++ b/index.html
@@ -3,15 +3,34 @@
     <head>
         <meta charset="UTF-8">
         <title>YUKIYA.me</title>
-
+        <style>
+            body{
+                background-color:#e6e6fa;
+            }
+            .size7{
+                font-size:300%;
+             }
+            .size5{
+                font-size:150%;
+            }
+            .size4{
+                font-size:110%;
+            }
+            .size3{
+                font-size:100%;
+            }
+            .bold{
+                font-weight: bold;   
+            }
+        </style>
     </head>
 
 
-    <body bgcolor="#e6e6fa">
+    <body>
         <p>
-        <font size="7"><b>YUKIYA.me</b></font><br>
-        <font size="5">ももつきゆきや</font><br>
-            <font size="4">Yukiya Momotsuki / yukiyalien</font>
+        <span class="size7"><span class="bold">YUKIYA.me</span></span><br>
+        <span class="size5">ももつきゆきや</span><br>
+            <span class="size4">Yukiya Momotsuki / yukiyalien</span>
         </p>
 
         <h1>My Profile</h1>
@@ -25,18 +44,18 @@
         <a class="github-button" href="https://github.com/yukiyalien" data-size="large" aria-label="Follow @yukiyalien on GitHub">Follow @yukiyalien</a>
         <!-- Place this tag in your head or just before your close body tag. -->
         <script async defer src="https://buttons.github.io/buttons.js"></script><br>
-        <font size="5"><b><a href="https://friends.nico/users/Yukiya/remote_follow">Follow me on the fediverse!</a></b></font>
+        <span class="size5"><span class="bold"><a href="https://friends.nico/users/Yukiya/remote_follow">Follow me on the fediverse!</a></span></span>
         <br>
-        <font size="3">
-                <b>Mastodon</b> <a rel="me" href="https://friends.nico/@Yukiya">@Yukiya@friends.nico</a><br>
-            <b>Discord</b> yukiyalien#7365 <br>
-        </font>
+        <span class="size3">
+                <span class="bold">Mastodon</span> <a rel="me" href="https://friends.nico/@Yukiya">@Yukiya@friends.nico</a><br>
+            <span class="bold">Discord</span> yukiyalien#7365 <br>
+        </span>
 
         <h1>niconico</h1>
-        <font size="3">
-        <b>My Account <a href="http://nico.ms/user/3844399">user/co3844399</a></b><br><br>
+        <span class="size3">
+        <span class="bold">My Account <a href="http://nico.ms/user/3844399">user/co3844399</a></span><br><br>
         <iframe width="312" height="176" src="https://com.nicovideo.jp/thumb_community/co3844399" scrolling="no" style="border:solid 1px #CCC;" frameborder="0"><a href="https://com.nicovideo.jp/community/co3844399">【ニコニコ動画】Yukiya Momotsuki&#039;s Community</a></iframe>
-        </font>
+        </span>
 
         <h1>My Tweets </h1>
         <a class="twitter-timeline" data-lang="en" data-width="500" data-height="500" data-theme="dark" href="https://twitter.com/yukiyalien?ref_src=twsrc%5Etfw">Tweets by yukiyalien</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
