ブログへのリンクを追加

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         <span class="size5"><span class="bold"><a href="https://friends.nico/users/Yukiya/remote_follow">Follow me on the fediverse!</a></span></span>
         <br>
         <span class="size3">
-                <span class="bold">Mastodon</span> <a rel="me" href="https://friends.nico/@Yukiya">@Yukiya@friends.nico</a><br>
+            <span class="bold">Mastodon</span> <a rel="me" href="https://friends.nico/@Yukiya">@Yukiya@friends.nico</a><br>
             <span class="bold">Discord</span> yukiyalien#7365 <br>
+            <span class="bold">Blog</span> <a href="https://blog.yukiya.me">「Yukiya's Blog」</a>
         </span>
 
         <h1>niconico</h1>
