--- a/index.html
+++ b/index.html
@@ -1,69 +1,45 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <title>YUKIYA.me</title>
-        <style>
-            body{
-                background-color:#e6e6fa;
-            }
-            .size7{
-                font-size:300%;
-             }
-            .size5{
-                font-size:150%;
-            }
-            .size4{
-                font-size:110%;
-            }
-            .size3{
-                font-size:100%;
-            }
-            .bold{
-                font-weight: bold;   
-            }
-        </style>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>ももつきゆきや</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <style>
+        body{
+            background-color:#282c37;
+        }
+        img.avatar {
+            border: solid 5px #2b90d9;
+            border-radius: 50%;
+            width:  180px;
+            height: 180px;
+            margin-top: 8%;
+        }
+        .center.main{
+            text-align: center;
+            color: #d9e1e8;
+        }
+        h1{
+            margin: 2px;
+        }
+        .myname{
+            font-family: 'Noto Sans JP', sans-serif;
+        }
+        .altname{
+            font-family: 'Noto Sans JP', sans-serif;
+            color: #9baec8;
+        }
+    </style>
+</head>
+<body>
+    <div class="center main">
+    <img class="avatar" src="https://github.com/yukiyalien.png" alt="yukiyalien">
+    <span class="myname"><h1>ももつきゆきや</h1></span>
+    <span class="altname">Yukiya Momotsuki, yukiyalien</span>
+    </div>
 
-
-    <body>
-        <p>
-        <span class="size7"><span class="bold">YUKIYA.me</span></span><br>
-        <span class="size5">ももつきゆきや</span><br>
-            <span class="size4">Yukiya Momotsuki / yukiyalien</span>
-        </p>
-
-        <h1>My Profile</h1>
-        千葉県に住む高校１年生。
-        インターネットが大好き。
-        <p>2017年春ごろから<a href="https://joinmastodon.org">Mastodon</a>をはじめとする連合型ソーシャルネットワーキングシステム「Fediverse」の世界に興味を持ち、以来<a href="https://friends.nico">friends.nico</a>を中心に貼り付いている。</p>
-
-        <h1>My Accounts</h1>
-        <a href="https://twitter.com/yukiyalien?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-lang="en" data-show-count="false">Follow @yukiyalien</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <!-- Place this tag where you want the button to render. -->
-        <a class="github-button" href="https://github.com/yukiyalien" data-size="large" aria-label="Follow @yukiyalien on GitHub">Follow @yukiyalien</a>
-        <!-- Place this tag in your head or just before your close body tag. -->
-        <script async defer src="https://buttons.github.io/buttons.js"></script><br>
-        <span class="size5"><span class="bold"><a href="https://friends.nico/users/Yukiya/remote_follow">Follow me on the fediverse!</a></span></span>
-        <br>
-        <span class="size3">
-            <span class="bold">Mastodon</span> <a rel="me" href="https://friends.nico/@Yukiya">@Yukiya@friends.nico</a><br>
-            <span class="bold">Discord</span> yukiyalien#7365 <br>
-            <span class="bold">Blog</span> <a href="https://blog.yukiya.me">「Yukiya's Blog」</a>
-        </span>
-
-        <h1>niconico</h1>
-        <span class="size3">
-        <span class="bold">My Account <a href="http://nico.ms/user/3844399">user/co3844399</a></span><br><br>
-        <iframe width="312" height="176" src="https://com.nicovideo.jp/thumb_community/co3844399" scrolling="no" style="border:solid 1px #CCC;" frameborder="0"><a href="https://com.nicovideo.jp/community/co3844399">【ニコニコ動画】Yukiya Momotsuki&#039;s Community</a></iframe>
-        </span>
-
-        <h1>My Tweets </h1>
-        <a class="twitter-timeline" data-lang="en" data-width="500" data-height="500" data-theme="dark" href="https://twitter.com/yukiyalien?ref_src=twsrc%5Etfw">Tweets by yukiyalien</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-        <br><br><br>
-        <p>
-        &copy;2019 Yukiya Momotsuki.
-        </p>
-    </body>
-    </html>
+</body>
+</html>
