各種リンクボタンの追加、CSSを外部に分離。

--- a/index.html
+++ b/index.html
@@ -5,41 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ももつきゆきや</title>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <style>
-        body{
-            background-color:#282c37;
-        }
-        img.avatar {
-            border: solid 5px #2b90d9;
-            border-radius: 50%;
-            width:  180px;
-            height: 180px;
-            margin-top: 8%;
-        }
-        .center.main{
-            text-align: center;
-            color: #d9e1e8;
-        }
-        h1{
-            margin: 2px;
-        }
-        .myname{
-            font-family: 'Noto Sans JP', sans-serif;
-        }
-        .altname{
-            font-family: 'Noto Sans JP', sans-serif;
-            color: #9baec8;
-        }
-    </style>
+    <link href="buttons.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class="center main">
     <img class="avatar" src="https://github.com/yukiyalien.png" alt="yukiyalien">
-    <span class="myname"><h1>ももつきゆきや</h1></span>
-    <span class="altname">Yukiya Momotsuki, yukiyalien</span>
+    <h1>ももつきゆきや<br></h1>
+    <span class="englishname">Yukiya Momotsuki<br></span>
+    <span class="altname">a.k.a. Yukiya, yukiyalien<br></span>
+</p>
+    <p class="aboutme">広く浅くオタクな日本の高校生
+
+    <div>
+    <a href="https://twitter.com/yukiyalien" class="btn_Twitter"><i class="fab fa-twitter fa-fw fa-lg"></i>@yukiyalien</a>
+    <a href="https://github.com/yukiyalien" class="btn_GitHub"><i class="fab fa-github fa-fw fa-lg"></i>@yukiyalien</a>
+    <a href="https://friends.nico/@Yukiya" class="btn_Mastodon"><i class="fab fa-mastodon fa-fw fa-lg"></i>@Yukiya@friends.nico</a>
+    <a href="mailto:030215yukiya@gmail.com" class="btn_Email"><i class="far fa-envelope fa-fw fa-lg"></i>030215yukiya@gmail.com</a>
+    <a href="https://discordapp.com/users/391589690119028736" class="btn_Discord"><i class="fab fa-discord fa-fw fa-lg"></i>yukiyalien#7365</a>
+    <a href="https://blog.yukiya.me" class="btn_Blogger"><i class="fab fa-blogger fa-fw fa-lg"></i>BLOG.yukiya.me</a>
+    <a href="https://tumblr.yukiya.me" class="btn_Tumblr"><i class="fab fa-tumblr fa-fw fa-lg"></i>Tumblr.yukiya.me</a>
     </div>
 
+    <p class="copyright">&copy;2019 Yukiya Momotsuki.</p>
 </body>
 </html>
