--- a/old.html
+++ b/old.html
@@ -2,14 +2,14 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>ももつきゆきや</title>
+        <title>YUKIYA.me</title>
         <style>
             body{
                 background-color:#e6e6fa;
             }
             .size7{
                 font-size:300%;
-            }
+             }
             .size5{
                 font-size:150%;
             }
@@ -20,33 +20,23 @@
                 font-size:100%;
             }
             .bold{
-                font-weight: bold;
-            }
-            div{
-                background: #ffffff;
-                width: 300px;
-                text-alien: center;
-                border: 1px solid #cccccc;
-                margin: 30px auto;
-            }
-            p{
-                font-family: sans-serif
+                font-weight: bold;   
             }
         </style>
     </head>
 
 
     <body>
-        <div>
         <p>
-        <span class="size6">ももつきゆきや</span><br>
-        <span class="size5">Yukiya Momotsuki</span><br>
-        <span class="size4">aka Yukiya, yukiyalien</span>
+        <span class="size7"><span class="bold">YUKIYA.me</span></span><br>
+        <span class="size5">ももつきゆきや</span><br>
+            <span class="size4">Yukiya Momotsuki / yukiyalien</span>
         </p>
 
-
-        </div>
-
+        <h1>My Profile</h1>
+        千葉県に住む高校１年生。
+        インターネットが大好き。
+        <p>2017年春ごろから<a href="https://joinmastodon.org">Mastodon</a>をはじめとする連合型ソーシャルネットワーキングシステム「Fediverse」の世界に興味を持ち、以来<a href="https://friends.nico">friends.nico</a>を中心に貼り付いている。</p>
 
         <h1>My Accounts</h1>
         <a href="https://twitter.com/yukiyalien?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-lang="en" data-show-count="false">Follow @yukiyalien</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
