Oldに新ページへのリンクを追加

--- a/old.html
+++ b/old.html
@@ -27,6 +27,7 @@
 
 
     <body>
+        <span class="size7"><a href="https://yukiya.me">New page is available!!</a></span>
         <p>
         <span class="size7"><span class="bold">YUKIYA.me</span></span><br>
         <span class="size5">ももつきゆきや</span><br>
