Mastodonのbioでの認証が使えるようにMastodonへのリンクにrel="me"属性を追加

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
     <a href="https://twitter.com/yukiyalien" class="btn_Twitter"><i class="fab fa-twitter fa-fw fa-lg"></i>@yukiyalien</a>
     <a href="https://github.com/yukiyalien" class="btn_GitHub"><i class="fab fa-github fa-fw fa-lg"></i>@yukiyalien</a>
-    <a href="https://friends.nico/@Yukiya" class="btn_Mastodon"><i class="fab fa-mastodon fa-fw fa-lg"></i>@Yukiya@friends.nico</a>
+    <a href="https://friends.nico/@Yukiya" class="btn_Mastodon" rel="me"><i class="fab fa-mastodon fa-fw fa-lg"></i>@Yukiya@friends.nico</a>
     <a href="mailto:030215yukiya@gmail.com" class="btn_Email"><i class="far fa-envelope fa-fw fa-lg"></i>030215yukiya@gmail.com</a>
     <a href="https://discordapp.com/users/391589690119028736" class="btn_Discord"><i class="fab fa-discord fa-fw fa-lg"></i>yukiyalien#7365</a>
     <a href="https://blog.yukiya.me" class="btn_Blogger"><i class="fab fa-blogger fa-fw fa-lg"></i>BLOG.yukiya.me</a>
