全てのリンクを別タブで開くように変更

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <p class="aboutme">広く浅くオタクな日本の高校生
 
     <div>
-    <a href="https://twitter.com/yukiyalien" class="btn_Twitter"><i class="fab fa-twitter fa-fw fa-lg"></i>@yukiyalien</a>
-    <a href="https://github.com/yukiyalien" class="btn_GitHub"><i class="fab fa-github fa-fw fa-lg"></i>@yukiyalien</a>
-    <a href="https://friends.nico/@Yukiya" class="btn_Mastodon" rel="me"><i class="fab fa-mastodon fa-fw fa-lg"></i>@Yukiya@friends.nico</a>
-    <a href="mailto:030215yukiya@gmail.com" class="btn_Email"><i class="far fa-envelope fa-fw fa-lg"></i>030215yukiya@gmail.com</a>
-    <a href="https://discordapp.com/users/391589690119028736" class="btn_Discord"><i class="fab fa-discord fa-fw fa-lg"></i>yukiyalien#7365</a>
-    <a href="https://blog.yukiya.me" class="btn_Blogger"><i class="fab fa-blogger fa-fw fa-lg"></i>BLOG.yukiya.me</a>
-    <a href="https://tumblr.yukiya.me" class="btn_Tumblr"><i class="fab fa-tumblr fa-fw fa-lg"></i>Tumblr.yukiya.me</a>
+    <a href="https://twitter.com/yukiyalien" class="btn_Twitter" target="_blank"><i class="fab fa-twitter fa-fw fa-lg"></i>@yukiyalien</a>
+    <a href="https://github.com/yukiyalien" class="btn_GitHub" target="_blank"><i class="fab fa-github fa-fw fa-lg"></i>@yukiyalien</a>
+    <a href="https://friends.nico/@Yukiya" class="btn_Mastodon" target="_blank" rel="me"><i class="fab fa-mastodon fa-fw fa-lg"></i>@Yukiya@friends.nico</a>
+    <a href="mailto:030215yukiya@gmail.com" class="btn_Email" target="_blank"><i class="far fa-envelope fa-fw fa-lg"></i>030215yukiya@gmail.com</a>
+    <a href="https://discordapp.com/users/391589690119028736" class="btn_Discord" target="_blank"><i class="fab fa-discord fa-fw fa-lg"></i>yukiyalien#7365</a>
+    <a href="https://blog.yukiya.me" class="btn_Blogger" target="_blank"><i class="fab fa-blogger fa-fw fa-lg"></i>BLOG.yukiya.me</a>
+    <a href="https://tumblr.yukiya.me" class="btn_Tumblr" target="_blank"><i class="fab fa-tumblr fa-fw fa-lg"></i>Tumblr.yukiya.me</a>
     </div>
-    <p class="old_and_src"><a href="https://yukiya.me/old" class="old_and_src">Old Page</a>・<a href="https://github.com/yukiyalien/yukiyalien.github.io" class="old_and_src">Source Codes</a></p>
+    <p class="old_and_src"><a href="https://yukiya.me/old" class="old_and_src" target="_blank">Old Page</a>・<a href="https://github.com/yukiyalien/yukiyalien.github.io" class="old_and_src" target="_blank">Source Codes</a></p>
     <p class="copyright">&copy;2019 Yukiya Momotsuki.</p>
 </body>
 </html>
