怒涛のmetaタグ追加

--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:url" content="https://yukiya.me" />
+    <meta property="og:title" content="ももつきゆきや" />
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="広く浅くオタクな日本の高校生" />
+    <meta property="og:image" content="https://github.io/yukiyalien.png" />
+    <meta name="twitter:card" content="summary_card" />
+    <meta name="twitter:site" content="@yukiyalien" />
+    <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+    <meta name="description" content="ももつきゆきや――広く浅くオタクな日本の高校生">
     <title>ももつきゆきや</title>
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon-152x152.png" sizes="152x152">
