Twitter Cardのmetaタグを修正

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="広く浅くオタクな日本の高校生" />
     <meta property="og:image" content="https://github.io/yukiyalien.png" />
-    <meta name="twitter:card" content="summary_card" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@yukiyalien" />
     <meta name="msapplication-TileImage" content="mstile-144x144.png" />
     <meta name="description" content="ももつきゆきや――広く浅くオタクな日本の高校生">
