Faviconが多すぎたので1つに絞った、他

--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <meta property="og:url" content="https://yukiya.me" />
     <meta property="og:title" content="ももつきゆきや" />
     <meta property="og:type" content="website">
-    <meta property="og:description" content="広く浅くオタクな日本の高校生" />
-    <meta property="og:image" content="https://github.io/yukiyalien.png" />
+    <meta property="og:description" content="広く浅くオタクな日本の高校生がノリで作った個人サイト" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@yukiyalien" />
     <meta name="msapplication-TileImage" content="mstile-144x144.png" />
     <meta name="description" content="ももつきゆきや――広く浅くオタクな日本の高校生">
     <title>ももつきゆきや</title>
     <link rel="icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/apple-touch-icon-152x152.png" sizes="152x152">
-    <link rel="icon" href="/favicon-192x192.png" sizes="192x192" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="buttons.css" rel="stylesheet" type="text/css">
