--- a/index.html
+++ b/index.html
@@ -21,22 +21,26 @@
     <title>ももつきゆきや</title>
 </head>
 <body>
-<img class="avatar" src="https://github.com/yukiyalien.png" alt="yukiyalien">
-<h1>ももつきゆきや<br></h1>
-<span class="englishname">Yukiya Momotsuki<br></span>
-<span class="altname">a.k.a. Yukiya, yukiyalien<br></span>
-<p class="aboutme">広く浅くオタクな日本の高校生
+<img class="avatar" src="https://github.com/yukiyalien.png" alt="yukiyalien"/>
+<h1 class="font-notosansjp">ももつきゆきや</h1>
+<div class="englishname font-ubuntu">Yukiya Momotsuki<br></div>
+<div class="altname font-ubuntu text-primary">a.k.a. Yukiya, yukiyalien<br></div>
+<p class="aboutme text-primary font-notosansjp">広く浅くオタクな日本の高校生</p>
 
 <div>
-    <a href="https://twitter.com/yukiyalien" class="btn_Twitter" target="_blank"><i class="fab fa-twitter fa-fw fa-lg"></i>@yukiyalien</a>
-    <a href="https://github.com/yukiyalien" class="btn_GitHub" target="_blank"><i class="fab fa-github fa-fw fa-lg"></i>@yukiyalien</a>
-    <a href="https://friends.nico/@Yukiya" class="btn_Mastodon" target="_blank" rel="me"><i class="fab fa-mastodon fa-fw fa-lg"></i>@Yukiya@friends.nico</a>
-    <a href="mailto:030215yukiya@gmail.com" class="btn_Email" target="_blank"><i class="far fa-envelope fa-fw fa-lg"></i>030215yukiya@gmail.com</a>
-    <a href="https://discordapp.com/users/391589690119028736" class="btn_Discord" target="_blank"><i class="fab fa-discord fa-fw fa-lg"></i>yukiyalien#7365</a>
-    <a href="https://blog.yukiya.me" class="btn_Blogger" target="_blank"><i class="fab fa-blogger fa-fw fa-lg"></i>BLOG.yukiya.me</a>
-    <a href="https://tumblr.yukiya.me" class="btn_Tumblr" target="_blank"><i class="fab fa-tumblr fa-fw fa-lg"></i>Tumblr.yukiya.me</a>
+    <a href="https://twitter.com/yukiyalien" class="btn twitter" target="_blank"><i class="fab fa-twitter fa-fw fa-lg"></i>@yukiyalien</a>
+    <a href="https://github.com/yukiyalien" class="btn gitHub" target="_blank"><i class="fab fa-github fa-fw fa-lg"></i>@yukiyalien</a>
+    <a href="https://friends.nico/@Yukiya" class="btn mastodon" target="_blank" rel="me"><i class="fab fa-mastodon fa-fw fa-lg"></i>@Yukiya@friends.nico</a>
+    <a href="mailto:030215yukiya@gmail.com" class="btn email" target="_blank"><i class="far fa-envelope fa-fw fa-lg"></i>030215yukiya@gmail.com</a>
+    <a href="https://discordapp.com/users/391589690119028736" class="btn discord" target="_blank"><i class="fab fa-discord fa-fw fa-lg"></i>yukiyalien#7365</a>
+    <a href="https://blog.yukiya.me" class="btn blogger" target="_blank"><i class="fab fa-blogger fa-fw fa-lg"></i>BLOG.yukiya.me</a>
+    <a href="https://tumblr.yukiya.me" class="btn tumblr" target="_blank"><i class="fab fa-tumblr fa-fw fa-lg"></i>Tumblr.yukiya.me</a>
 </div>
-<p class="old_and_src"><a href="https://yukiya.me/old" class="old_and_src" target="_blank">Old Page</a>・<a href="https://github.com/yukiyalien/yukiyalien.github.io" class="old_and_src" target="_blank">Source Codes</a></p>
-<p class="copyright">&copy;2019 Yukiya Momotsuki.</p>
+
+<p class="old_and_src font-ubuntu">
+    <a href="https://yukiya.me/old" target="_blank">Old Page</a>・<a href="https://github.com/yukiyalien/yukiyalien.github.io" target="_blank">Source Codes</a>
+</p>
+
+<p class="copyright font-ubuntu text-primary">&copy;2019 Yukiya Momotsuki.</p>
 </body>
 </html>
